# graph-of-marks

./: .coverage  .dockerignore  .gitignore  Makefile  Makefile_true  README.md  README_PACKAGE.md  bench_vllm.py  check_deps.py  docker_run.sh  docker_run_funzionante.sh  image_preprocessor_complete.py  pyproject.toml  run_demo.py  run_pipeline_with_intermediates.py  run_preprocessing.sh  run_statistics.sh  setup.py  test_installation.sh
examples/: GoM_example_notebook.ipynb  README.md  comprehensive_demo.ipynb  demo.ipynb  demo_notebook.ipynb  quickstart.py
graph-of-marks/tests/: test_wbf_and_utils.py
images/: example_data.csv
scripts/: benchmark_fusion.py  profile_preprocessor.py  run_preprocessing.sh
scripts/download/: download_coco.sh  download_dataset.sh  download_gqa.sh  download_refcoco.sh  download_textvqa.sh  download_vqa.sh
scripts/parse/: load_coco.py  load_gqa.py  load_refcoco.py  load_textvqa.py
src/: all_in_one_gom.py  evaluate.py  image_graph_preprocessor.py  image_graph_preprocessor_first.py  image_graph_preprocessor_working.py  image_preprocessor.py  qa_generation.py  run_pipeline_with_intermediates.py  vqa.py
src/gom/: __init__.py  api.py  config.py  types.py
src/gom/detectors/: __init__.py  base.py  detectron2.py  grounding_dino.py  manager.py  owlvit.py  yolov8.py
src/gom/fusion/: README.md  __init__.py  benchmark.py  cascade.py  confluence.py  nms.py  wbf.py  wbf_optimized.py
src/gom/graph/: prompt.py  scene_graph.py  utils.py
src/gom/pipeline/: preprocessor.py
src/gom/relations/: clip_rel.py  inference.py  llm_guided.py  physics.py  spatial_3d.py
src/gom/relations/geometry/: __init__.py  core.py  nearest.py  predicates.py
src/gom/segmentation/: __init__.py  base.py  sam1.py  sam2.py  samhq.py
src/gom/utils/: batch_processing.py  boxes.py  cache.py  calibration.py  clip_cache.py  clip_utils.py  colors.py  depth.py  depth_v2.py  ensemble.py  gpu_memory.py  mixed_precision.py  model_registry.py  tta.py
src/gom/viz/: rendering_opt.py  visualizer.py
src/gom/vqa/: io.py  models.py  preproc.py  runner.py  types.py
src/igp/: __init__.py  config.py  nlp.py  types.py
src/igp/detectors/: __init__.py  base.py  detectron2.py  grounding_dino.py  manager.py  owlvit.py  yolov8.py
src/igp/fusion/: README.md  __init__.py  benchmark.py  cascade.py  confluence.py  nms.py  wbf.py  wbf_optimized.py
src/igp/graph/: prompt.py  scene_graph.py
src/igp/pipeline/: preprocessor.py
src/igp/relations/: clip_rel.py  geometry.py  inference.py  llm_guided.py  physics.py  semantic_filter.py  spatial_3d.py
src/igp/relations/geometry/: __init__.py  core.py  masks.py  nearest.py  predicates.py  vectorized.py
src/igp/segmentation/: base.py  fastsam.py  refinement.py  sam1.py  sam2.py  samhq.py
src/igp/utils/: boxes.py  cache.py  cache_advanced.py  calibration.py  caption.py  clip_utils.py  colors.py  depth.py  depth_v2.py  detector_utils.py  ensemble.py  mixed_precision.py  model_registry.py  tta.py
src/igp/viz/: rendering_opt.py  visualizer.py
src/igp/vqa/: io.py  models.py  preproc.py  runner.py  types.py
