[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-of-marks"
version = "0.1.0"
description = "Visual scene understanding pipeline with multi-model detection, segmentation, and scene graph generation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DISI-UNIBO-NLP"}
]
keywords = [
    "computer-vision",
    "scene-graph",
    "object-detection",
    "segmentation",
    "visual-question-answering",
    "sam",
    "yolo",
    "clip",
    "deep-learning",
    "pytorch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=11.0.0",
    "numpy>=1.24.0,<=2.2.0",
    "opencv-python>=4.8.0",
    "transformers>=4.50.0",
    "networkx>=3.1",
    "matplotlib>=3.8.0",
    "tqdm>=4.65.0",
    "datasets>=3.0.0",
    "sentence-transformers>=3.0.0",
    "ensemble-boxes>=1.0.7",
    "huggingface_hub>=0.31.0",
    "psutil>=5.9.0",
    "omegaconf",
    "pycocotools",
]

[project.optional-dependencies]
segmentation = [
    "segment-anything",
    "segment-anything-hq",
    "fastsam",
]
sam2 = [
    "sam2",
]
detection = [
    "ultralytics",
]
depth = [
    "depth-anything-v2",
]
vqa = [
    "accelerate>=1.4.0",
    "vllm>=0.8.0",
    "qwen-vl-utils>=0.0.10",
    "peft>=0.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
]
visualization = [
    "adjustText>=0.8",
]
logging = [
    "wandb>=0.19.0",
    "colorlog>=6.8.0",
]
all = [
    "segment-anything",
    "segment-anything-hq",
    "fastsam",
    "sam2",
    "ultralytics",
    "depth-anything-v2",
    "accelerate>=1.4.0",
    "vllm>=0.8.0",
    "qwen-vl-utils>=0.0.10",
    "peft>=0.9.0",
    "adjustText>=0.8",
    "wandb>=0.19.0",
    "colorlog>=6.8.0",
]

[project.urls]
Homepage = "https://github.com/disi-unibo-nlp/graph-of-marks"
Documentation = "https://github.com/disi-unibo-nlp/graph-of-marks#readme"
Repository = "https://github.com/disi-unibo-nlp/graph-of-marks"
"Bug Reports" = "https://github.com/disi-unibo-nlp/graph-of-marks/issues"

[project.scripts]
gom-preprocess = "gom.cli.preprocess:main"
gom-vqa = "gom.cli.vqa:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gom*"]
exclude = ["tests*", "scripts*"]

[tool.setuptools.package-data]
gom = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=gom --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
