[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-of-marks"
version = "0.1.0"
description = "Visual scene understanding pipeline with multi-model detection, segmentation, and scene graph generation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DISI-UNIBO-NLP"}
]
keywords = [
    "computer-vision",
    "scene-graph",
    "object-detection",
    "segmentation",
    "visual-question-answering",
    "sam",
    "yolo",
    "clip",
    "deep-learning",
    "pytorch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "pillow>=10.2.0",
    "numpy>=1.24.0,<=2.2.0",
    "opencv-python>=4.11.0",
    "transformers>=4.50.0",
    "networkx>=3.1",
    "matplotlib>=3.5.0",
    "tqdm>=4.65.0",
    "datasets>=3.3.1",
    "sentence-transformers>=3.4.1",
    "ensemble-boxes>=1.0.7",
    "huggingface_hub>=0.31.1",
    "psutil>=5.9.5",
    "omegaconf",
    "pycocotools",
    "scipy>=1.11.4",
    "pyyaml",
    "fvcore>=0.1.5",
    "iopath>=0.1.10",
    "hydra-core>=1.3.2",
    "einops",
    "timm==0.9.12",
    "spacy>=3.5.0,<3.9",
    "nltk==3.9.1",
    "blis",
    "colorlog>=6.9.0",
    "pretty-errors==1.2.25",
    "sentencepiece==0.2.0",
    "num2words==0.5.13",
]

[project.optional-dependencies]
segmentation = [
    "segment-anything-hq",
]
sam2 = [] # git dependency
detection = [
    "ultralytics==8.3.99",
]
depth = [
    "depth-anything-v2",
]
vqa = [
    "accelerate==1.4.0",
    "vllm>=0.8.0",
    "qwen-vl-utils>=0.0.10",
    "peft>=0.9.0",
    "ollama>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
]
visualization = [
    "adjustText==0.8",
]
logging = [
    "wandb>=0.19.0",
]
all = [
    "segment-anything-hq",
    "ultralytics==8.3.99",
    "depth-anything-v2",
    "accelerate==1.4.0",
    "vllm>=0.8.0",
    "qwen-vl-utils>=0.0.10",
    "peft>=0.9.0",
    "adjustText==0.8",
    "wandb>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/disi-unibo-nlp/graph-of-marks"
Documentation = "https://github.com/disi-unibo-nlp/graph-of-marks#readme"
Repository = "https://github.com/disi-unibo-nlp/graph-of-marks"
"Bug Reports" = "https://github.com/disi-unibo-nlp/graph-of-marks/issues"

[project.scripts]
gom-preprocess = "gom.cli.preprocess:main"
gom-vqa = "gom.cli.vqa:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gom*"]
exclude = ["tests*", "scripts*"]

[tool.setuptools.package-data]
gom = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=gom --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
